<resources>
    <string name="app_name">RiseVietNam</string>

    <!--Class Main Detail-->
    <string name="class_main_detail_image">Hình Ảnh</string>
    <string name="class_main_detail_video">Video</string>
    <string name="class_main_detail_info">Thông tin chi tiết</string>

    <!--Class General-->
    <string name="class_general_title">Tổng Quát</string>
    <string name="class_general_program_tree">Cây Chương Trình</string>
    <string name="class_general_schedule">Lịch Học</string>
    <string name="class_general_price">Biểu Phí Và Chương Trình Khác</string>
    <string name="class_general_form_price">Form Tính Phí</string>
    <string name="class_general_website">Website Trường</string>

    <string name="empty">Dữ Liệu Rỗng</string>
    <string name="hint_name">Name</string>
    <string name="hint_other">Other</string>
    <string name="hint_note">Note</string>
    <string name="hint_hour">Hour</string>
    <string name="hint_money_hour">Money\/Hour</string>
    <string name="hint_discount">Discount</string>
    <string name="hint_discount1">Discount1</string>
    <string name="hint_discount1_value">Discount1 - value</string>
    <string name="hint_discount2">Discount2</string>
    <string name="hint_discount3">Discount3</string>
    <string name="hint_discount2_value">Discount2 - value</string>
    <string name="hint_total">Total</string>
    <string name="hint_calculate">Calculate</string>
    <string name="hint_save">Save</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_email">Email</string>
    <string name="hint_address">Address</string>
    <string name="english">Study English?</string>
    <string name="gift">Gift</string>
    <string name="backpack">Backpack</string>
    <string name="shirt">Shirt</string>
    <string name="voucher">Voucher</string>
    <string name="hint_vnd">(VND)</string>
    <string name="hint_nameFa">Father\'s Name</string>
    <string name="hint_phoneFa">Father\'s Phone</string>
    <string name="hint_emailFa">Father\'s Email</string>
    <string name="hint_nameMo">Mother\'s Name</string>
    <string name="hint_phoneMo">Mother\'s Phone</string>
    <string name="hint_emailMo">Mother\'s Email</string>

    <string name="err_title">Cảnh báo</string>
    <string name="err_missing_name">Bạn chưa nhập trường name</string>
    <string name="hint_age">Age</string>

    <string name="discount_whole_year">Whole year</string>
    <string name="discount_half_year">Half year</string>
    <string name="discount_none">None</string>
    <string name="discount_bro">Brothers\/Sisters</string>
    <string name="discount_other">Other</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="unknown">Unknown</string>
    <string name="number">No.</string>

    <!--Margin-->
    <!--<string name="button_margin_left">10%</string>-->
    <!--<string name="button_margin_padding">5%</string>-->
    <!--<string name="button_margin_top">10%</string>-->
    <!--<string name="button_height">15%</string>-->
    <!--<string name="button_width">60%</string>-->

    <!--<string name="title_margin_left">5%</string>-->
    <!--<string name="title_margin_top">5%</string>-->
    <!--<string name="title_height">10%</string>-->
    <!--<string name="title_width">20%</string>-->


</resources>
