<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/icon_background_gray480"
    tools:context=".activity.MainClassDetailActivity">

    <TextView
        android:id="@+id/title_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/LightGrey"
        android:gravity="center"
        android:textAppearance="@android:style/TextAppearance.Large"
        app:layout_heightPercent="10%"
        app:layout_marginLeftPercent="5%"
        app:layout_marginTopPercent="5%"
        app:layout_widthPercent="20%"
        tools:text="PreK"/>

    <Button
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_info"
        android:text="@string/class_main_detail_image"
        app:layout_heightPercent="15%"
        app:layout_marginLeftPercent="10%"
        app:layout_marginTopPercent="10%"
        app:layout_widthPercent="60%"/>

    <Button
        android:id="@+id/video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:text="@string/class_main_detail_video"
        app:layout_heightPercent="15%"
        app:layout_marginLeftPercent="10%"
        app:layout_marginTopPercent="5%"
        app:layout_widthPercent="60%"/>

    <Button
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/video"
        android:text="@string/class_main_detail_info"
        app:layout_heightPercent="15%"
        app:layout_marginLeftPercent="10%"
        app:layout_marginTopPercent="5%"
        app:layout_widthPercent="60%"/>

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/info"
        app:layout_heightPercent="15%"
        app:layout_marginBottomPercent="5%"
        app:layout_marginRightPercent="5%"
        app:layout_marginTopPercent="5%">

        <ImageView
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:contentDescription="@null"
            android:scaleType="centerInside"
            android:src="@drawable/icon_back"/>
    </android.support.percent.PercentRelativeLayout>


</android.support.percent.PercentRelativeLayout>
