<?xml version="1.0" encoding="utf-8"?>
<vn.com.rise.project.views.percentage.PercentLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp">

    <vn.com.rise.project.views.percentage.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_heightPercent="10%">

        <!--<TextView-->
        <!--android:id="@+id/txtLabelName"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="match_parent"-->
        <!--android:gravity="bottom"-->
        <!--android:padding="10dp"-->
        <!--android:text="Name"-->
        <!--android:textAppearance="@android:style/TextAppearance.Large"-->
        <!--app:layout_widthPercent="10%"/>-->

        <!--<EditText-->
        <!--android:id="@+id/edtName"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="match_parent"-->
        <!--android:gravity="bottom"-->
        <!--android:padding="10dp"-->
        <!--android:textAppearance="@android:style/TextAppearance.Large"-->
        <!--app:layout_widthPercent="60%"/>-->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edtLayoutName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_widthPercent="60%">

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_name"
                android:singleLine="true"
                android:textAppearance="@android:style/TextAppearance.Large"/>
        </android.support.design.widget.TextInputLayout>


        <!--<TextView-->
        <!--android:id="@+id/txtLabelAge"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="match_parent"-->
        <!--android:gravity="bottom"-->
        <!--android:padding="10dp"-->
        <!--android:text="Age"-->
        <!--android:textAppearance="@android:style/TextAppearance.Large"-->
        <!--app:layout_widthPercent="10%"/>-->

        <!--<Spinner-->
        <!--android:id="@+id/spinnerAge"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="match_parent"-->
        <!--android:padding="10dp"-->
        <!--android:textAppearance="@android:style/TextAppearance.Large"-->
        <!--app:layout_widthPercent="20%">-->
        <!--</Spinner>-->

        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_widthPercent="20%"
            app:ms_alignLabels="false"
            app:ms_arrowColor="@color/DarkGray"
            app:ms_arrowSize="16dp"
            app:ms_baseColor="@color/White"
            app:ms_enableErrorLabel="false"
            app:ms_enableFloatingLabel="false"
            app:ms_errorColor="@color/Red"
            app:ms_floatingLabelColor="@color/CadetBlue"
            app:ms_floatingLabelText="floating label"
            app:ms_highlightColor="@color/LightGreen"
            app:ms_hint="hint"
            app:ms_hintColor="@color/Gray"
            app:ms_multiline="false"
            app:ms_thickness="2dp"/>

    </vn.com.rise.project.views.percentage.PercentLinearLayout>

    <vn.com.rise.project.views.percentage.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_heightPercent="10%">

        <TextView
            android:id="@+id/txtLabelEng"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/edtName"
            android:gravity="bottom"
            android:padding="10dp"
            android:text="Study English?"
            android:textAppearance="@android:style/TextAppearance.Large"
            app:layout_widthPercent="30%"/>

        <CheckBox
            android:id="@+id/checkboxEngYes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/edtName"
            android:layout_gravity="center_vertical"/>

    </vn.com.rise.project.views.percentage.PercentLinearLayout>

    <vn.com.rise.project.views.percentage.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--<TextView-->
        <!--android:id="@+id/txtLabelNameFa"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="match_parent"-->
        <!--android:gravity="bottom|center"-->
        <!--android:padding="10dp"-->

        <!--android:text="Father's\nName"-->
        <!--android:textAppearance="@android:style/TextAppearance.Large"/>-->

        <!--<EditText-->
        <!--android:id="@+id/edtNameFa"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="match_parent"-->
        <!--android:gravity="bottom"-->
        <!--android:padding="10dp"-->
        <!--android:textAppearance="@android:style/TextAppearance.Large"-->
        <!--app:layout_widthPercent="40%"/>-->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edtLayoutNameFa"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_widthPercent="50%">

            <EditText
                android:id="@+id/edtNameFa"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_nameFa"
                android:singleLine="true"
                android:textAppearance="@android:style/TextAppearance.Large"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edtLayoutNameMo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_widthPercent="50%">

            <EditText
                android:id="@+id/edtNameMo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_nameMo"
                android:singleLine="true"
                android:textAppearance="@android:style/TextAppearance.Large"/>
        </android.support.design.widget.TextInputLayout>

        <!--<TextView-->
        <!--android:id="@+id/txtLabelNameMo"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="match_parent"-->
        <!--android:gravity="bottom|center"-->
        <!--android:padding="10dp"-->
        <!--android:text="Mother's\nName"-->
        <!--android:textAppearance="@android:style/TextAppearance.Large"/>-->

        <!--<EditText-->
        <!--android:id="@+id/edtNameMo"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="match_parent"-->
        <!--android:gravity="bottom"-->
        <!--android:padding="10dp"-->
        <!--android:textAppearance="@android:style/TextAppearance.Large"-->
        <!--app:layout_widthPercent="40%"/>-->


    </vn.com.rise.project.views.percentage.PercentLinearLayout>

</vn.com.rise.project.views.percentage.PercentLinearLayout>